--- a/style.css
+++ b/style.css
@@ -4,14 +4,12 @@ body {
 }
 
 #bg {
-   background-image: linear-gradient( 
-    to bottom right, #090024, #18005e
-  );
+   background-color:  white;
 }
 
 #title {
   text-align: center;
-  color: white;
+  color: black;
   padding: 0px;
   font-size: 40px;
 }
@@ -21,8 +19,12 @@ body {
 }
 
 #table_countries {
-  background-color: black;
-  color: white;
+  padding: 12px;
+  background-color: white;
+  box-shadow: 0 0 8px #BBBBBB;
+  color: black;
+  border-top-right-radius: 40px;
+  border-top-left-radius: 40px;
   font-size: 28px;
   width: 70%;
   margin: auto;
