--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
+html {
+  overflow: -moz-scrollbars-vertical; 
+  overflow-y: scroll;
+}
+
 body {
   margin: 0px;
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
 }
 
 #bg {
-   background-color:  white;
+  background-color:  white;
 }
 
 #title {
@@ -12,10 +18,6 @@ body {
   color: black;
   padding: 0px;
   font-size: 40px;
-}
-
-#table_countries_bg {
-  margin: auto;  
 }
 
 #table_countries {
@@ -26,7 +28,7 @@ body {
   border-top-right-radius: 40px;
   border-top-left-radius: 40px;
   font-size: 28px;
-  width: 70%;
+  width: 80%;
   margin: auto;
 }
 
@@ -35,6 +37,7 @@ body {
 }
 
 .table_countries_header {
+  font-weight: 800;
   padding: 20px;
 }
 
